tooling/nargo_cli/tests/snapshots/execution_success/regression_8890/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: pub Field) -> pub Field {
    assert(x != y);
    let mut f: [fn(Field) -> Field; 1] = [my_fun];
    f[0] = my_fun2;
    f[0](x)
}

fn my_fun(x: Field) -> Field {
    x + 1
}

fn my_fun2(x: Field) -> Field {
    x + 2
}
